# ImHex-Hashes-Plugin

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
source/: plugin_hashes.cpp
